# ZAPPY

./: Cargo.toml  LICENSE  NOTICE.txt  POLICIES.md  README.md
ZAPPY --M/actions/: Cargo.toml  actioncommander.rs  actions.rs  agents.rs  allfunctions.rs  commandgeneration.rs  internetact.rs  main.rs  offlineact.rs  programming.rs  programminghelper.rs  security_link.rs  self_trainact.rs  telemetry.rs
ZAPPY --M/actions/advanced/: advancedallfuncs.rs  main.rs
ZAPPY --M/actions/secirity/: advanced.rs  basesecurity.rs  commander.rs  main.rs
ZAPPY --M/actions/src/: lib.rs
ZAPPY --M/autonomy/: Cargo.toml  linker.rs  main.rs  telemetry.rs
ZAPPY --M/autonomy/decision/: decisionmaking.rs  main.rs  reviewer.rs  reviewerno2.rs
ZAPPY --M/autonomy/master/: main.rs  maker.rs  masterfunc.rs
ZAPPY --M/autonomy/module/: helper.rs  improvise.rs  main.rs  neuron.rs
ZAPPY --M/autonomy/src/: lib.rs
ZAPPY --M/creativity/: Cargo.toml  create.rs  helpermethod.rs  hepler.rs  main.rs  telemetry.rs
ZAPPY --M/creativity/mainfunc/: advanced.rs  allfunc.rs  main.rs  reviewer.rs
ZAPPY --M/creativity/src/: lib.rs
ZAPPY --M/entire_system_orchestrator_app/: Cargo.toml
ZAPPY --M/learning/: Cargo.toml  README.md  dataloader.rs  device_manager.rs  main.rs  modules.rs  pipeline.rs  replay.rs  telemetry.rs
ZAPPY --M/learning/ML/: editor.rs  func.rs  main.rs  ml.rs  reporter.rs  submodel.rs
ZAPPY --M/learning/combining/: combining.rs  func.rs  main.rs  reviewer.rs
ZAPPY --M/learning/configs/: actions_risk.json  agi_foundation.json  intent_understanding.json  sample_train.json  world_signal.json
ZAPPY --M/learning/dataset/: dense_weights.json  linear_weights.json
ZAPPY --M/learning/datasets/actions_metrics/: index.json  schema.json
ZAPPY --M/learning/datasets/actions_metrics/shards/: shard-00000.data
ZAPPY --M/learning/datasets/agi_foundation/: index.json  schema.json
ZAPPY --M/learning/datasets/agi_foundation/shards/: shard-00000.data
ZAPPY --M/learning/datasets/intent_understanding/: index.json  schema.json
ZAPPY --M/learning/datasets/intent_understanding/shards/: shard-00000.data
ZAPPY --M/learning/datasets/sample/: index.json  schema.json
ZAPPY --M/learning/datasets/sample/shards/: shard-00000.data  shard-00001.data
ZAPPY --M/learning/datasets/world_signals/: index.json  schema.json
ZAPPY --M/learning/datasets/world_signals/shards/: shard-00000.data
ZAPPY --M/learning/deepLearning/: editor.rs  main.rs  model.rs  reporter.rs  savor.rs  search.rs  seek.rs  trainer.rs
ZAPPY --M/learning/logs/2025/11/22/: job-20251122-061910.log.jsonl  job-20251122-061924.log.jsonl  job-20251122-063528.log.jsonl  (+7 more)
ZAPPY --M/learning/logs/jobs/: index.jsonl
ZAPPY --M/learning/models/actions_risk_assessor/: model_schema.json
ZAPPY --M/learning/models/actions_risk_assessor/checkpoints/: actions-risk-v0.meta.json  actions-risk-v0.weights.json  checkpoint-1763793398.meta.json  checkpoint-1763793663.meta.json  checkpoint-1763793691.meta.json  checkpoint-1763793698.meta.json
ZAPPY --M/learning/models/agi_foundation/: model_schema.json
ZAPPY --M/learning/models/agi_foundation/checkpoints/: agi-foundation-v0.meta.json  agi-foundation-v0.weights.json  checkpoint-1763793890.meta.json
ZAPPY --M/learning/models/autonomy_cycle_classifier/: model_schema.json
ZAPPY --M/learning/models/autonomy_cycle_classifier/checkpoints/: autonomy-cycle-v0.meta.json  autonomy-cycle-v0.weights.json
ZAPPY --M/learning/models/intent_understanding/: model_schema.json
ZAPPY --M/learning/models/intent_understanding/checkpoints/: checkpoint-1763792353.meta.json  checkpoint-1763792367.meta.json  intent-understanding-v0.meta.json  intent-understanding-v0.weights.json
ZAPPY --M/learning/models/knowledge_snippet_ranker/: model_schema.json
ZAPPY --M/learning/models/knowledge_snippet_ranker/checkpoints/: kn-ranker-v0.meta.json  kn-ranker-v0.weights.json
ZAPPY --M/learning/models/metacognition_reflection_scorer/: model_schema.json
ZAPPY --M/learning/models/metacognition_reflection_scorer/checkpoints/: meta-reflection-v0.meta.json  meta-reflection-v0.weights.json
ZAPPY --M/learning/models/world_signal_forecaster/: model_schema.json
ZAPPY --M/learning/models/world_signal_forecaster/checkpoints/: checkpoint-1763793331.meta.json  checkpoint-1763793599.meta.json  checkpoint-1763793651.meta.json  world-signal-v0.meta.json  world-signal-v0.weights.json
ZAPPY --M/learning/pytorch_runner/: __init__.py  config.py  main.py  trainer.py
ZAPPY --M/learning/src/: lib.rs
ZAPPY --M/learning/subsidarylearning/: define.rs  main.rs  saver.rs  searching.rs  submodels.rs
ZAPPY --M/memory_data/: Cargo.toml  main.rs  telemetry.rs
ZAPPY --M/memory_data/src/: lib.rs  long_term.rs  short_term.rs
ZAPPY --M/nlp/: Cargo.toml  answer.rs  consolecmdreciever.rs
ZAPPY --M/nlp/comprehension/: advanced.rs  algo.rs  comprehension.rs  helper.rs  main.rs  method.rs
ZAPPY --M/nlp/dataset/: index.rs  loader.rs
ZAPPY --M/planning/: Cargo.toml  main.rs  module.rs  telemetry.rs
ZAPPY --M/planning/long_term/: advanced.rs  engine.rs  func.rs  helper.rs  main.rs  plans.rs  reviewer.rs  sources.rs
ZAPPY --M/planning/short_term/: engine.rs  helper.rs  main.rs  methods.rs
ZAPPY --M/planning/src/: lib.rs
ZAPPY --M/shared_event_bus/: Cargo.toml
ZAPPY --M/shared_event_bus/src/: lib.rs
ZAPPY --M/shared_logging/: Cargo.toml
ZAPPY --M/shared_logging/src/: lib.rs
ZAPPY --M/simulationengine/: Cargo.toml  compare.rs  helper.rs  main.rs  methods.rs  predictor.rs  reviewer.rs  simul_env_generator.rs  simulator.rs
ZAPPY --M/simulationengine/advanced/: advanced_simulator.rs  main.rs  report.rs  thinking.rs
ZAPPY --M/simulationengine/src/: lib.rs
ZAPPY --M/trn_cli/: Cargo.toml
ZAPPY --M/trn_cli/src/: main.rs
ZAPPY --M/world/: Cargo.toml  feature_store.rs  feed_config.rs  infoseeker.rs  learning.rs  main.rs  model.rs  telemetry.rs
ZAPPY --M/world/advanced/: advanced.rs  advmodel.rs  algo.rs  main.rs  reviewer.rs  train.rs
ZAPPY --M/world/data/: feeds.toml  sample_signals.jsonl
ZAPPY --M/world/src/: lib.rs
(+76 files in other folders)
