[package]
name = "zappy-actions"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tier-9 AGI action orchestration and execution fabric"
authors = ["Zappy AGI Team"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "process", "io-std", "io-util"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
diff = "0.1"
anyhow = "1"
shared-logging = { path = "../shared_logging" }
shared-event-bus = { path = "../shared_event_bus" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "process", "io-std", "io-util"] }

