[package]
name = "zappy-orchestrator"
version = "0.1.0"
edition = "2021"
authors = ["Zappy AGI Team"]
license = "MIT"

[[bin]]
name = "entire_system_orchestrator"
path = "../entire_system_orchestrator.rs"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared-logging = { path = "../shared_logging" }
shared-event-bus = { path = "../shared_event_bus" }
zappy-planning = { path = "../planning" }
zappy-world = { path = "../world" }
zappy-simulationengine = { path = "../simulationengine" }
zappy-self-upgrade = { path = "../self_upgrade" }
zappy-metacognition = { path = "../metacognition" }
zappy-learning = { path = "../learning" }
zappy-actions = { path = "../actions" }
zappy-knowledge = { path = "../knowledge" }
zappy-autonomy = { path = "../autonomy" }
zappy-reasoning = { path = "../reasoning" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
indexmap = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

