[package]
name = "zappy-memory-data"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tier-9 AGI short-term and long-term memory orchestration"
authors = ["Zappy AGI Team"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
shared-logging = { path = "../shared_logging" }
shared-event-bus = { path = "../shared_event_bus" }
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"

