[package]
name = "zappy-nlp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Large-scale production NLP runtime with comprehension, answering, and training pipelines."
authors = ["Zappy AGI Team"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
parking_lot = "0.12"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "io-std"] }
uuid = { version = "1", features = ["serde", "v4"] }
shared-logging = { path = "../shared_logging" }
shared-event-bus = { path = "../shared_event_bus" }

[dev-dependencies]
tempfile = "3"
once_cell = "1"

