[package]
name = "shared-event-bus"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Event bus abstractions for the Tier-10 AGI stack"
authors = ["Zappy AGI Team"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "fs", "io-util"] }

[dev-dependencies]
tempfile = "3"

