[package]
name = "shared-logging"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Structured JSON logging utilities for the Tier-10 AGI stack"
authors = ["Zappy AGI Team"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

